--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -60,10 +60,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f3ec0c19fd0>]"
+       "[<matplotlib.lines.Line2D at 0x7feb41d812e8>]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -133,10 +133,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f3e90d71b70>]"
+       "[<matplotlib.lines.Line2D at 0x7feb41d950b8>]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -194,7 +194,7 @@
        "143.6"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -237,7 +237,7 @@
        "10.4"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -266,7 +266,7 @@
        "       47.23214286, 66.78571429, 86.33928571, 51.14285714, 55.05357143])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -295,7 +295,7 @@
        "45.93750000000002"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -314,7 +314,8 @@
     },
     "colab_type": "code",
     "id": "ul3IEwWlDp-e",
-    "outputId": "d2ea0219-d516-4eea-a967-c35f7cabf7ec"
+    "outputId": "d2ea0219-d516-4eea-a967-c35f7cabf7ec",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -323,7 +324,7 @@
        "6.182142857142859"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,19 +340,13 @@
     "id": "huXrhXQsZTMt"
    },
    "source": [
-    "1. Подберите скорость обучения (alpha) и количество итераций:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"hw\"></a>"
+    "<a id=\"hw\"></a>\n",
+    "#### Задание 1. Подберите скорость обучения (alpha) и количество итераций:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -367,7 +362,6 @@
     "alpha = 1e-5\n",
     "max_iterations = 10**6\n",
     "W = np.array([1, 0.5])\n",
-    "W, alpha\n",
     "error_acceptance = 47"
    ]
   },
@@ -382,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -424,45 +418,56 @@
     "id": "5Qu1o4JhZYwI"
    },
    "source": [
-    "*2. В этом коде мы избавляемся от итераций по весам, но тут есть ошибка, исправьте ее:"
+    "#### Задание 2. В этом коде мы избавляемся от итераций по весам, но тут есть ошибка, исправьте ее:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 76,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 185
-    },
-    "colab_type": "code",
-    "id": "WZZzDCQLY4pA",
-    "outputId": "09019bd9-74c4-45fd-c85b-5014a6abec1d"
+    "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "n = X.shape[1]\n",
+    "alpha = 1e-5\n",
+    "max_iterations = 10**6\n",
+    "W = np.array([1, 0.5])\n",
+    "error_acceptance = 47"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "np.sum(..., **axis=1**)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 [45.82666933  4.17025984] 46.99950398131465\n",
-      "100 [45.82783618  4.17142669] 46.99814140431163\n",
-      "200 [45.82895547  4.17254598] 46.996887627492086\n",
-      "300 [45.83002914  4.17361965] 46.99573396328831\n",
-      "400 [45.83105906  4.17464957] 46.99467241782476\n",
-      "500 [45.83204701  4.17563751] 46.99369563552764\n",
-      "600 [45.83299469  4.17658519] 46.992796848157006\n",
-      "700 [45.83390374  4.17749425] 46.99196982790888\n",
-      "800 [45.83477575  4.17836626] 46.991208844262424\n",
-      "900 [45.83561222  4.17920273] 46.99050862427198\n"
+      "3917 [45.82665742  4.17024792] 46.99950398131465\n"
      ]
     }
    ],
    "source": [
-    "for i in range(1000):\n",
+    "for i in range(max_iterations):\n",
     "    y_pred = np.dot(W, X)\n",
     "    err = calc_mse(y, y_pred)\n",
-    "    W -= (alpha * (1/n * 2 * np.sum(X * (y_pred - y))))\n",
-    "    if i % 100 == 0:\n",
+    "    \n",
+    "    if err <= error_acceptance:\n",
+    "        print(i, W, err)\n",
+    "        break\n",
+    "        \n",
+    "    W -= alpha * err * (1/n * 2 * np.sum(X * (y_pred - y), axis=1))\n",
+    "        \n",
+    "    if i == max_iterations-1:\n",
     "        print(i, W, err)"
    ]
   },
