--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -472,6 +472,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Задание 3. вместо того, чтобы задавать количество итераций, задайте условие остановки алгоритма - когда ошибка за итерацию начинает изменяться ниже определенного порога:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = X.shape[1]\n",
+    "alpha = 1e-5\n",
+    "max_iterations = 10**6\n",
+    "W = np.array([1, 0.5])\n",
+    "tol = 1e-6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11139 [47.18804954  3.91885645] 45.93854524690294\n"
+     ]
+    }
+   ],
+   "source": [
+    "prev_err = 2 * tol\n",
+    "\n",
+    "for i in range(max_iterations):\n",
+    "    y_pred = np.dot(W, X)\n",
+    "    err = calc_mse(y, y_pred)\n",
+    "    \n",
+    "    if abs(err - prev_err) <= tol:\n",
+    "        print(i, W, err)\n",
+    "        break\n",
+    "    else:\n",
+    "        prev_err = err\n",
+    "        \n",
+    "    W -= alpha * err * (1/n * 2 * np.sum(X * (y_pred - y), axis=1))\n",
+    "        \n",
+    "    if i == max_iterations-1:\n",
+    "        print(i, W, err)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
