--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -906,7 +906,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -961,6 +963,24 @@
     "for feat_index in range(X_st.shape[0]):\n",
     "    plot_feat(feat_index)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Задание 2:\n",
+    "\n",
+    "Можно ли к одному и тому же признаку применить сразу и нормализацию, и стандартизацию?\n",
+    "\n",
+    "Нет, т.к. нормализация переведет все значения в отрезок [0, 1], а стандартизация приведет mean к 0 и std = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
