--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -276,7 +276,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2bc6e0562c8>]"
+       "[<matplotlib.lines.Line2D at 0x1d618b6b448>]"
       ]
      },
      "execution_count": 13,
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -358,21 +358,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 [-10.8340302   -0.99950432  -0.61917815  14.83255634] 2.4796246985952113\n",
-      "200 [-19.90836314  -3.07190896  -3.66148088  18.20440812] 0.22660786780998424\n",
-      "300 [-23.54505392  -2.60095109  -5.95144035  19.61181443] 0.16322578734202214\n",
-      "400 [-24.79892828  -2.91545392  -6.1494211   21.06862244] 0.1612551679059107\n",
-      "500 [-26.48775646  -3.21648105  -6.35710472  22.68383634] 0.15590072523354498\n",
-      "600 [-27.74625433  -3.08086458  -7.0493239   23.22558765] 0.1448362568624343\n",
-      "700 [-28.77041001  -2.95251532  -7.57113664  23.82637413] 0.1425843198676896\n",
-      "800 [-29.67565731  -3.03415499  -7.84013282  24.52836187] 0.13835103354706352\n",
-      "900 [-30.54293948  -3.1059876   -8.10026004  25.16555405] 0.13392216564564266\n",
-      "1000 [-31.36284454  -3.18852923  -8.34217203  25.77238272] 0.13044380817964316\n"
+      "100 [-8.51673767 -1.71111958 -1.38606986  7.28158718] 0.2931793432178089\n",
+      "200 [-13.1126498   -2.9175892   -1.32887278  15.25013257] 1.77933049006798\n",
+      "300 [-16.34784614  -2.52365197  -3.58711257  14.06488507] 0.232096686619099\n",
+      "400 [-17.91804414  -2.48234291  -4.2159068   15.04779364] 0.20804811235838208\n",
+      "500 [-19.22367121  -2.56735697  -4.65327889  16.09142292] 0.1999788185336852\n",
+      "600 [-20.4198467   -2.56236187  -5.04609211  17.01262085] 0.18797981277798054\n",
+      "700 [-21.51451908  -2.58394491  -5.39959323  17.86189225] 0.17921033630297173\n",
+      "800 [-22.52683338  -2.60985146  -5.7208318   18.65211611] 0.17189745050293928\n",
+      "900 [-23.4700599   -2.63737706  -6.0160765   19.39263407] 0.1656428669875163\n",
+      "1000 [-24.35402171  -2.66399472  -6.28978993  20.09126257] 0.16018417338185723\n"
      ]
     }
    ],
    "source": [
-    "W = eval_model(X_st, y, iterations=10**3, alpha=4)"
+    "# W = eval_model(X_st, y, iterations=10**3, alpha=10**-2)\n",
+    "W = eval_model(X_st, y, iterations=10**3, alpha=3)"
    ]
   },
   {
@@ -385,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,17 +396,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.35272436, 0.01715962, 0.99999998, 0.08887198, 0.92015299,\n",
-       "       0.07045247, 1.        , 0.0275156 , 0.56294312, 0.99999845])"
+       "array([0.31748791, 0.03358156, 0.99999851, 0.11279739, 0.84225538,\n",
+       "       0.11996467, 0.99999986, 0.01770816, 0.47084046, 0.99996194])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,28 +439,88 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = calc_pred(W, X_st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 1, 0, 1, 0, 1, 0, 1, 1], dtype=int64)"
+       "array([0, 0, 1, 0, 1, 0, 1, 0, 0, 1], dtype=int64)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calc_pred(W, X_st)"
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Задание 5:\n",
+    "Посчитайте Accuracy, матрицу ошибок, точность и полноту, а также F1 score."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 5, 0, 1)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TP = np.sum(np.logical_and(y_pred == 1, y == 1))\n",
+    "TN = np.sum(np.logical_and(y_pred == 0, y == 0))\n",
+    "FP = np.sum(np.logical_and(y_pred == 1, y == 0))\n",
+    "FN = np.sum(np.logical_and(y_pred == 0, y == 1))\n",
+    "\n",
+    "TP, TN, FP, FN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9, 1.0, 0.8, 0.888888888888889)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy = (TP + TN)/(TP + TN + FP + FN)\n",
+    "precision = TP/(TP + FP)\n",
+    "recall = TP/(TP + FN)\n",
+    "f1_score = 2*precision*recall/(precision + recall)\n",
+    "\n",
+    "accuracy, precision, recall, f1_score"
+   ]
   }
  ],
  "metadata": {
