--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -474,52 +474,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(4, 5, 0, 1)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "TP = np.sum(np.logical_and(y_pred == 1, y == 1))\n",
-    "TN = np.sum(np.logical_and(y_pred == 0, y == 0))\n",
-    "FP = np.sum(np.logical_and(y_pred == 1, y == 0))\n",
-    "FN = np.sum(np.logical_and(y_pred == 0, y == 1))\n",
-    "\n",
-    "TP, TN, FP, FN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TP:4\tTN:5\tFP:0\tFN:1\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(0.9, 1.0, 0.8, 0.888888888888889)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy = (TP + TN)/(TP + TN + FP + FN)\n",
-    "precision = TP/(TP + FP)\n",
-    "recall = TP/(TP + FN)\n",
-    "f1_score = 2*precision*recall/(precision + recall)\n",
+    "def metrics(y, y_pred):\n",
+    "    TP = np.sum(np.logical_and(y_pred == 1, y == 1))\n",
+    "    TN = np.sum(np.logical_and(y_pred == 0, y == 0))\n",
+    "    FP = np.sum(np.logical_and(y_pred == 1, y == 0))\n",
+    "    FN = np.sum(np.logical_and(y_pred == 0, y == 1))\n",
     "\n",
-    "accuracy, precision, recall, f1_score"
+    "    print(f'TP:{TP}\\tTN:{TN}\\tFP:{FP}\\tFN:{FN}')\n",
+    "    \n",
+    "    accuracy = (TP + TN)/(TP + TN + FP + FN)\n",
+    "    precision = TP/(TP + FP)\n",
+    "    recall = TP/(TP + FN)\n",
+    "    f1_score = 2*precision*recall/(precision + recall)\n",
+    "\n",
+    "    return accuracy, precision, recall, f1_score\n",
+    "\n",
+    "metrics(y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Задание 6:\n",
+    "Могла ли модель переобучиться? Почему?\n",
+    "\n",
+    "Могла, т.к. мало примеров для обучения."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Задание 7:\n",
+    "\n",
+    " Создайте функции eval_model_l1 и eval_model_l2 с применением L1 и L2 регуляризаций соответственно."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_model_l1(X, y, iterations, alpha=1e-4, lambda_=1e-8):\n",
+    "    np.random.seed(42)\n",
+    "    W = np.random.randn(X.shape[0])\n",
+    "    n = X.shape[1]\n",
+    "    for i in range(1, iterations+1):\n",
+    "        z = np.dot(W, X)\n",
+    "        y_pred = sigmoid(z)\n",
+    "        err = calc_logloss(y, y_pred)\n",
+    "        W -= alpha * (1/n * np.dot((y_pred - y), X.T) + lambda_ * np.sign(W))\n",
+    "        if i % (iterations / 10) == 0:\n",
+    "            print(i, W, err)\n",
+    "    return W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_model_l2(X, y, iterations, alpha=1e-4, lambda_=1e-8):\n",
+    "    np.random.seed(42)\n",
+    "    W = np.random.randn(X.shape[0])\n",
+    "    n = X.shape[1]\n",
+    "    for i in range(1, iterations+1):\n",
+    "        z = np.dot(W, X)\n",
+    "        y_pred = sigmoid(z)\n",
+    "        err = calc_logloss(y, y_pred)\n",
+    "        W -= alpha * (1/n * 2 * np.dot((y_pred - y), X.T) + lambda_ * W) \n",
+    "        if i % (iterations / 10) == 0:\n",
+    "            print(i, W, err)\n",
+    "    return W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000 [ 0.14824263 -0.6931325   0.77943781  1.2130076 ] 0.5686375217599586\n",
+      "2000 [-0.00870593 -0.68419854  0.90689657  1.22452819] 0.5476460866197759\n",
+      "3000 [-0.12385726 -0.69204419  0.98297807  1.26930016] 0.5369617638002453\n",
+      "4000 [-0.21670787 -0.70786625  1.03046354  1.32974811] 0.5295356665030506\n",
+      "5000 [-0.29757211 -0.72669241  1.06150217  1.39664615] 0.5233586167104296\n",
+      "6000 [-0.37182646 -0.74613589  1.08249171  1.46527762] 0.517833278950102\n",
+      "7000 [-0.44226181 -0.76507486  1.09687272  1.53333105] 0.5127523384507872\n",
+      "8000 [-0.5103353  -0.78301221  1.10656178  1.5997335 ] 0.5080216036600996\n",
+      "9000 [-0.57681632 -0.79975967  1.1126796   1.66403917] 0.5035842166428176\n",
+      "10000 [-0.64211773 -0.81528008  1.11592293  1.726115  ] 0.499398897274946\n",
+      "TP:4\tTN:4\tFP:1\tFN:1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.8, 0.8, 0.8, 0.8000000000000002)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# L2\n",
+    "W_l2 = eval_model_l2(X_st, y, 10**4, alpha=1e-3)\n",
+    "metrics(y, calc_pred(W_l2, X_st, threshold=0.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000 [ 0.25805313 -0.68199349  0.68835344  1.24114036] 0.5906912246159404\n",
+      "2000 [ 0.14826602 -0.69312634  0.77941079  1.21302466] 0.5686262545323586\n",
+      "3000 [ 0.06278    -0.68610934  0.8515415   1.21294395] 0.5559892553313789\n",
+      "4000 [-0.00868432 -0.68420411  0.90686651  1.22453939] 0.5476418424905514\n",
+      "5000 [-0.06998377 -0.68665665  0.94958774  1.2441288 ] 0.5416473076008509\n",
+      "6000 [-0.1238398  -0.69204712  0.98295251  1.26930673] 0.5369589599303932\n",
+      "7000 [-0.17225684 -0.69935375  1.00933208  1.29828375] 0.5330195941588649\n",
+      "8000 [-0.216695   -0.70786658  1.03044302  1.3297497 ] 0.5295332314112333\n",
+      "9000 [-0.25821004 -0.71709279  1.04752724  1.36276055] 0.5263411473515527\n",
+      "10000 [-0.29756284 -0.72669078  1.06148567  1.39664379] 0.523356378499251\n",
+      "TP:4\tTN:4\tFP:1\tFN:1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.8, 0.8, 0.8, 0.8000000000000002)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# L1\n",
+    "W_l1 = eval_model_l1(X_st, y, 10**4, alpha=1e-3)\n",
+    "metrics(y, calc_pred(W_l1, X_st, threshold=0.5))"
    ]
   }
  ],
